added complete navbar and hamburger styling

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
             <div class="logo"><a href="/">BRAND NAME</a></div>
 
             <!-- Hamburger -->
-            <div class="hamburger">
+            <a href="#" class="hamburger">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
-            </div>
+            </a>
+                
+            
 
             <div class="navbar-links">
                 <ul>
