added subscription card sections and info

--- a/index.html
+++ b/index.html
@@ -35,11 +35,28 @@
 
     <div class="price-component">
         <div class="price-card">
-            <h3>Join Today!</h3>
-            <h4>30-Day Free Trial!</h4>
-            <p>Access thousands of xyz today, chat with all members about xyz.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            <div class="top-info">
+                <h3 class="title">Join Today!</h3>
+                <h4 class="shout">30-Day Free Trial!</h4>
+                <p>Access thousands of xyz today, chat with all members about xyz.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="left-info">
+                <h5>Monthly Subscription</h5>
+                <h4>£9.99 Per Month</h4>
+                <h5>Full Access</h5>
+                <button><a href="#">Sign Up</a></button>
+            </div>
+            <div class="right-info">
+                <h5>Perks</h5>
+                <ul>
+                    <li>Unlimited Access!</li>
+                    <li>Unlimited Solutions!</li>
+                    <li>Unlimited Everything!</li>
+                </ul>
+            </div>
         </div>
+        
     </div>
 </body>
 </html>
