price card css added

--- a/index.html
+++ b/index.html
@@ -38,23 +38,25 @@
             <div class="top-info">
                 <h3 class="title">Join Today!</h3>
                 <h4 class="shout">30-Day Free Trial!</h4>
-                <p>Access thousands of xyz today, chat with all members about xyz.</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                <p class="top-blurb">Access thousands of xyz today, chat and network with all members about xyz. Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
             </div>
-            <div class="left-info">
-                <h5>Monthly Subscription</h5>
-                <h4>£9.99 Per Month</h4>
-                <h5>Full Access</h5>
-                <button><a href="#">Sign Up</a></button>
+            <div class="bottom-info">
+                <div class="left-info">
+                    <h5>Monthly Subscription</h5>
+                    <span class="price">£9.99</span><span class="price-m"> per month</span>
+                    <h5>Unlimited Access</h5>
+                    <a href="#" class="sign-up-button">Sign Up</a>
+                </div>
+                <div class="right-info">
+                    <h5>Perks</h5>
+                    <ul>
+                        <li>Unlimited Access!</li>
+                        <li>Unlimited Solutions!</li>
+                        <li>Unlimited Everything!</li>
+                    </ul>
+                </div>
             </div>
-            <div class="right-info">
-                <h5>Perks</h5>
-                <ul>
-                    <li>Unlimited Access!</li>
-                    <li>Unlimited Solutions!</li>
-                    <li>Unlimited Everything!</li>
-                </ul>
-            </div>
+            
         </div>
         
     </div>
