completed signup card css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="logo"><a href="/">BRAND NAME</a></div>
+            
+            <div class="logo"><a href="/"><img src="./images/favicon-32x32.png" alt="logo-image" class="logo-image"></a></div>
 
             <!-- Hamburger -->
             <a href="#" class="hamburger">
@@ -25,9 +26,9 @@
 
             <div class="navbar-links">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">LOG IN</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">SIGN UP</a></li>
                 </ul>
             </div>
         </nav>
@@ -36,9 +37,9 @@
     <div class="price-component">
         <div class="price-card">
             <div class="top-info">
-                <h3 class="title">Join Today!</h3>
-                <h4 class="shout">30-Day Free Trial!</h4>
-                <p class="top-blurb">Access thousands of xyz today, chat and network with all members about xyz. Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                <h3 class="title">Join Treva Today!</h3>
+                <h4 class="shout">Invest with as little as £1.</h4>
+                <p class="top-blurb">Join over 1 million traders & investors, network and share your insight.</p>
             </div>
             <div class="bottom-info">
                 <div class="left-info">
@@ -50,9 +51,9 @@
                 <div class="right-info">
                     <h5>Perks</h5>
                     <ul>
-                        <li>Unlimited Access!</li>
-                        <li>Unlimited Solutions!</li>
-                        <li>Unlimited Everything!</li>
+                        <li><b>NO</b> Shares ISA & Stock Fees</li>
+                        <li><b>NO</b> Commission Fees</li>
+                        <li><b>NO</b> Foreign Exchange Fees</li>
                     </ul>
                 </div>
             </div>
