completed navbar css

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,700;0,900;1,100;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>Price Grid</title>
+    <link rel="icon" type="image" href="./images/favicon-32x32.png">
 </head>
 <body>
     <header>
         <nav class="navbar">
             
-            <div class="logo"><a href="/"><img src="./images/favicon-32x32.png" alt="logo-image" class="logo-image"></a></div>
+            <div class="logo"><a href="/">TREVA</a></div>
 
             <!-- Hamburger -->
             <a href="#" class="hamburger">
@@ -61,5 +62,11 @@
         </div>
         
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 </body>
 </html>
