--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,700;0,900;1,100;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <title>Price Grid</title>
+    <title>TREVA</title>
     <link rel="icon" type="image" href="./images/favicon-32x32.png">
 </head>
 <body>
@@ -68,5 +68,7 @@
     <br>
     <br>
     <br>
+
+    <script src="./javascript/script.js"></script>
 </body>
 </html>
