Logo link changed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar">
             
-            <div class="logo"><a href="/index.html">TREVA</a></div>
+            <div class="logo"><a href="#">TREVA</a></div>
 
             <!-- Hamburger -->
             <a href="#" class="hamburger">
